<resources>
    <string name="app_name">ATMConsulting</string>
    <string name="about_company">About Company</string>
    <string name="lorem_ipsun">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In elit nulla,
        sollicitudin a egestas sit amet, egestas id felis. Morbi vitae lectus sed metus molestie sodales
        at ut augue. Nunc at mollis orci. Sed euismod in diam eget dictum. Duis consectetur vestibulum mi,
        ut finibus nisl. Proin dictum metus in elementum placerat. Sed pretium tortor a augue tempus, quis
        accumsan enim imperdiet. Pellentesque habitant morbi tristique senectus et netus et malesuada fames
        ac turpis egestas. Suspendisse egestas, velit eget elementum ullamcorper, diam risus maximus ante,
        et hendrerit enim mi et libero. Cras a massa eu sem suscipit viverra sit amet in ligula. Mauris a
        odio et ligula molestie porttitor id sed justo. Nulla imperdiet lacinia leo placerat ultrices.
        Nulla facilisi. Nunc dignissim, lacus eget consequat aliquam, nibh odio malesuada elit, et
        vestibulum tortor augue et erat. Nulla sed libero magna. Integer viverra eget orci sit amet
        condimentum. Vestibulum sodales efficitur orci, sed aliquam dui tempus in. Vestibulum efficitur
        arcu nunc, et egestas eros bibendum vitae. Ut rhoncus risus fermentum scelerisque commodo.
        Ut ac semper neque, eu viverra metus. Nam et volutpat sem. Nunc quis sodales eros,
        vel mattis felis.</string>
    <string name="about_services">Services</string>
    <string name="consulting">Consulting</string>
    <string name="process">Process</string>
    <string name="monitoring_projects">Monitoring and projects</string>
    <string name="suspension_points">...</string>
    <string name="about_clients">Our clients</string>
    <string name="client1">Software development Company</string>
    <string name="client2">Audit Company</string>
    <string name="about_contact">Contact</string>
    <string name="email">Email: consulting@atm.com</string>
    <string name="phone">Phone: +55 11 8765-4321</string>
    <string name="mobile">Mobile: +55 11 98765-4321</string>
</resources>
